# Dungeon-Tavern-NPC

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  run.sh
.github/workflows/: ci.yml  code-review.yml  pages.yml
app/: CMakeLists.txt
app/include/: DialogueSystem.hpp  FirstPersonController.hpp  InputBindings.hpp  SceneLoader.hpp  SceneTypes.hpp
app/src/: DialogueSystem.cpp  DungeonApp.cpp  FirstPersonController.cpp  SceneLoader.cpp
assets/: scene.json
assets/models/: Skeleton_Mage.glb
assets/models/dungeon/: Statue.gltf  chest_gold.gltf  wall_doorway.gltf
assets/models/tavern/: license.txt  scene.gltf
assets/textures/env/suburban_garden/: irr_negx.hdr  irr_posx.hdr
blender/: build_scene.py  corridor.json  tavern_scene.blend
cmake/: CompileShaders.cmake  CopyAssets.cmake
docs/: project-defense-guide.md  study-guide.md  todo.html
docs/doxydocs/html/: _day_night_cycle_8hpp.html  _day_night_cycle_8hpp.js  _day_night_cycle_8hpp__dep__incl.map  _day_night_cycle_8hpp__dep__incl.md5  _day_night_cycle_8hpp__incl.map  _day_night_cycle_8hpp__incl.md5  _day_night_cycle_8hpp_source.html  _dialogue_system_8hpp.html  _dialogue_system_8hpp.js  _dialogue_system_8hpp__dep__incl.map  _dialogue_system_8hpp__dep__incl.md5  _dialogue_system_8hpp__incl.map  _dialogue_system_8hpp__incl.md5  _dialogue_system_8hpp_source.html  _dungeon_app_8cpp.html  _dungeon_app_8cpp.js  _dungeon_app_8cpp__incl.map  _dungeon_app_8cpp__incl.md5  _dungeon_app_8cpp_source.html  _first_person_controller_8hpp.html  _first_person_controller_8hpp.js  _first_person_controller_8hpp__dep__incl.map  _first_person_controller_8hpp__dep__incl.md5  _first_person_controller_8hpp__incl.map  _first_person_controller_8hpp__incl.md5  _first_person_controller_8hpp_source.html  _input_bindings_8hpp.html  _input_bindings_8hpp.js  _input_bindings_8hpp__dep__incl.map  _input_bindings_8hpp__dep__incl.md5  _input_bindings_8hpp__incl.map  _input_bindings_8hpp__incl.md5  _input_bindings_8hpp_source.html  _libs_8cpp.html  _libs_8cpp.js  _libs_8cpp__incl.map  _libs_8cpp__incl.md5  _libs_8cpp_source.html  _r_e_a_d_m_e_8md.html  _scene_loader_8hpp.html  (+218 more)
docs/doxydocs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+40 more)
framework/include/modules/: Animations.hpp  Colliders.hpp  GltfScene.hpp  Scene.hpp  Starter.hpp  TextMaker.hpp
shaders/mesh/: BlinnPhong.frag  GltfScene.frag  GltfScene.vert  MeshSimple.vert  ShadowCube.frag  SimpleLambert.frag
shaders/skybox/: SkyboxExercise.frag
source/assets/dialogue/: dialogues.json
source/assets/models/: Bard.gltf  Cube.gltf  Innkeeper.gltf  Merchant.gltf  Skeleton_Mage.gltf  Skeleton_Minion.gltf  Softball.gltf  Sphere.gltf
source/assets/models/dungeon/: chest.gltf  door_gate.gltf  floor_tile_big_spikes.gltf  wall_doorway_frame.gltf  wall_doorway_scaffold.gltf
source/assets/scenes/: scene.json
source/assets/textures/suburban_garden/: irr_negy.hdr  irr_negz.hdr  irr_posy.hdr  irr_posz.hdr
source/include/: DialogueSystem.hpp  SceneLoader.hpp
source/include/modules/: Colliders.hpp  Starter.hpp  TextMaker.hpp
source/shaders/: MeshTBN.vert
source/shaders/framework/: ColliderShow.frag  ColliderShow.vert
source/shaders/ibl/: IBLExercise.frag
source/shaders/mesh/: BlinnPhong.frag  LambertSimple.frag  MeshSimple.vert  ShadowCube.vert  ShadowDepth.frag  ShadowDepth.vert  SunShadow.vert
source/shaders/skybox/: Skybox.frag  Skybox.vert  SkyboxExercise.vert
source/src/: AudioSystem.hpp  DayNightCycle.hpp  DialogueSystem.hpp  DungeonApp.cpp  FirstPersonController.hpp  InputBindings.hpp  Libs.cpp  SceneLoader.hpp  SceneTypes.hpp  ShopSystem.hpp  SplashScreen.hpp  main.cpp
tools/: bake_kaykit_static.py
